--- a/project01/index.html
+++ b/project01/index.html
@@ -8,14 +8,5 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
-  <body class="body-grunt">
-    <h1>123</h1>
-    <span>321</span>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem quam
-      excepturi vero fugiat praesentium officiis velit dolorum. Beatae
-      necessitatibus totam molestiae dignissimos soluta, voluptas hic vero,
-      quibusdam asperiores aut assumenda.
-    </p>
-  </body>
+  <body class="body-grunt"></body>
 </html>
