--- a/project01/index.html
+++ b/project01/index.html
@@ -8,5 +8,15 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
-  <body class="body-grunt"></body>
+  <body class="body-grunt">
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. At eum repellat,
+      voluptates animi nemo dolorum.
+    </p>
+    <br />
+    <p>
+      Praesentium, magnam. Atque iusto debitis quo velit ullam! Beatae aliquam,
+      odit consectetur repellendus mollitia dolor.
+    </p>
+  </body>
 </html>
