--- a/project01/index.html
+++ b/project01/index.html
@@ -4,21 +4,109 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body class="body-grunt">
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. At eum repellat,
-      voluptates animi nemo dolorum.
-    </p>
-    <br />
-    123
-    <br />
-    <p>
-      Praesentium, magnam. Atque iusto debitis quo velit ullam! Beatae aliquam,
-      odit consectetur repellendus mollitia dolor.
-    </p>
+    <header>
+      <nav>
+        <!--переходи по сайту-->
+        <a href="/"><img src="./img/Logo.jpg" alt="foto-logo" />WebStudio</a>
+
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+
+        <address>
+          <ul>
+            <!--         Maps
+              <li>
+               <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                target=" _blank"
+                rel="noopener noreferrer nofollow">
+                м. Київ, пр-т Лесі Українки, 26</a>
+              </li>         -->
+
+            <li>
+              <a href="mailto:info@devstudio.com">mail:info@devstudio.com</a>
+            </li>
+            <li><a href="tel:+380961111111">tel:+380961111111</a></li>
+          </ul>
+        </address>
+      </nav>
+    </header>
+
+    <main>
+      <!--hero-->
+
+      <section>
+        <h1>Головний Заголовок</h1>
+        <a href="">перехід до реєстрації</a>
+      </section>
+
+      <section>
+        <h2>заголовок секції - що ми можемо</h2>
+        <ul>
+          <li>
+            <a href="">
+              <img src="./img/img1.jpg" alt="foto1" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./img/img2.jpg" alt="foto2" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./img/img3.jpg" alt="foto3" />
+            </a>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <a href="">
+              <img src="./img/img-a.jpg" alt="Smiling man with a beard" />
+              <h3>Alex</h3>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./img/img-b.jpg" alt="Smiling man" />
+              <h3>Peter</h3>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./img/img-c.jpg" alt="Smiling girl" />
+              <h3>Anna</h3>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./img/img-d.jpg" alt="Smiling man" />
+              <h3>Jonn</h3>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      <!--footer-->
+      <p>footer</p>
+      <a href="./index.html">WebStudio</a>
+      <span>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </span>
+    </footer>
   </body>
 </html>
