--- a/project01/index.html
+++ b/project01/index.html
@@ -12,17 +12,17 @@
     <header>
       <nav>
         <!--переходи по сайту-->
-        <a href="/"><img src="./img/Logo.jpg" alt="foto-logo" />WebStudio</a>
+        <a href="">WebStudio</a>
 
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
-
-        <address>
-          <ul>
-            <!--         Maps
+      </nav>
+      <address>
+        <ul>
+          <!--         Maps
               <li>
                <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                 target=" _blank"
@@ -30,39 +30,40 @@
                 м. Київ, пр-т Лесі Українки, 26</a>
               </li>         -->
 
-            <li>
-              <a href="mailto:info@devstudio.com">mail:info@devstudio.com</a>
-            </li>
-            <li><a href="tel:+380961111111">tel:+380961111111</a></li>
-          </ul>
-        </address>
-      </nav>
+          <li>
+            <a href="mailto:info@devstudio.com">mail:info@devstudio.com</a>
+          </li>
+          <li><a href="tel:+380961111111">tel:+380961111111</a></li>
+        </ul>
+      </address>
     </header>
 
     <main>
       <!--hero-->
 
       <section>
-        <h1>Головний Заголовок</h1>
-        <a href="">перехід до реєстрації</a>
+        <h1>Effective Solutions for Your Business</h1>
+        <!--перехід до реєстрації-->
+
+        <a href="">Order Service</a>
       </section>
 
       <section>
-        <h2>заголовок секції - що ми можемо</h2>
+        <h2>What are we doing</h2>
         <ul>
           <li>
             <a href="">
-              <img src="./img/img1.jpg" alt="foto1" />
+              <img src="./img/img1.jpg" alt="Computer MAC" />
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./img/img2.jpg" alt="foto2" />
+              <img src="./img/img2.jpg" alt="Mobile phones" />
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./img/img3.jpg" alt="foto3" />
+              <img src="./img/img3.jpg" alt="Computer and phones" />
             </a>
           </li>
         </ul>
@@ -74,26 +75,86 @@
           <li>
             <a href="">
               <img src="./img/img-a.jpg" alt="Smiling man with a beard" />
-              <h3>Alex</h3>
             </a>
+            <h3>Mark Guerrero</h3>
+            <h4>Product Designer</h4>
+            <ul>
+              <li>
+                <a href=""> <img src="./img/instagram 2.jpg" alt="" /></a>
+              </li>
+              <li>
+                <a href=""> <img src="./img/twitter 1.jpg" alt="" /></a>
+              </li>
+              <li>
+                <a href=""> <img src="./img/FB.jpg" alt="" /></a>
+              </li>
+              <li>
+                <a href=""> <img src="./img/In.jpg" alt="" /></a>
+              </li>
+            </ul>
           </li>
           <li>
             <a href="">
               <img src="./img/img-b.jpg" alt="Smiling man" />
-              <h3>Peter</h3>
             </a>
+            <h3>Tom Ford</h3>
+            <h4>Frontend Developer</h4>
+            <ul>
+              <li>
+                <a href=""> <img src="./img/instagram 2.jpg" alt="" /></a>
+              </li>
+              <li>
+                <a href=""> <img src="./img/twitter 1.jpg" alt="" /></a>
+              </li>
+              <li>
+                <a href=""> <img src="./img/FB.jpg" alt="" /></a>
+              </li>
+              <li>
+                <a href=""> <img src="./img/In.jpg" alt="" /></a>
+              </li>
+            </ul>
           </li>
           <li>
             <a href="">
               <img src="./img/img-c.jpg" alt="Smiling girl" />
-              <h3>Anna</h3>
             </a>
+            <h3>Camila Garcia</h3>
+            <h4>Marketing</h4>
+            <ul>
+              <li>
+                <a href=""> <img src="./img/instagram 2.jpg" alt="" /></a>
+              </li>
+              <li>
+                <a href=""> <img src="./img/twitter 1.jpg" alt="" /></a>
+              </li>
+              <li>
+                <a href=""> <img src="./img/FB.jpg" alt="" /></a>
+              </li>
+              <li>
+                <a href=""> <img src="./img/In.jpg" alt="" /></a>
+              </li>
+            </ul>
           </li>
           <li>
             <a href="">
               <img src="./img/img-d.jpg" alt="Smiling man" />
-              <h3>Jonn</h3>
             </a>
+            <h3>Daniel Wilson</h3>
+            <h4>UI Designer</h4>
+            <ul>
+              <li>
+                <a href=""> <img src="./img/instagram 2.jpg" alt="" /></a>
+              </li>
+              <li>
+                <a href=""> <img src="./img/twitter 1.jpg" alt="" /></a>
+              </li>
+              <li>
+                <a href=""> <img src="./img/FB.jpg" alt="" /></a>
+              </li>
+              <li>
+                <a href=""> <img src="./img/In.jpg" alt="" /></a>
+              </li>
+            </ul>
           </li>
         </ul>
       </section>
