--- a/project01/index.html
+++ b/project01/index.html
@@ -45,7 +45,10 @@
         <h1>Effective Solutions for Your Business</h1>
         <!--перехід до реєстрації-->
 
-        <a href="">Order Service</a>
+        <button type="button" style="width: 80px; height: 50px">
+          Order Service
+        </button>
+        <br /><br />
       </section>
 
       <section>
