--- a/project01/index.html
+++ b/project01/index.html
@@ -56,17 +56,32 @@
         <ul>
           <li>
             <a href="">
-              <img src="./img/img1.jpg" alt="Computer MAC" />
+              <img
+                src="./img/img1.jpg"
+                alt="Computer MAC"
+                width="360px"
+                height="300px"
+              />
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./img/img2.jpg" alt="Mobile phones" />
+              <img
+                src="./img/img2.jpg"
+                alt="Mobile phones"
+                width="360px"
+                height="300px"
+              />
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./img/img3.jpg" alt="Computer and phones" />
+              <img
+                src="./img/img3.jpg"
+                alt="Computer and phones"
+                width="360px"
+                height="300px"
+              />
             </a>
           </li>
         </ul>
@@ -77,85 +92,113 @@
         <ul>
           <li>
             <a href="">
-              <img src="./img/img-a.jpg" alt="Smiling man with a beard" />
+              <img
+                src="./img/img-a.jpg"
+                alt="Smiling man with a beard"
+                width="264px"
+                height="260px"
+              />
             </a>
             <h3>Mark Guerrero</h3>
             <h4>Product Designer</h4>
             <ul>
               <li>
-                <a href=""> <img src="./img/instagram 2.jpg" alt="" /></a>
+                <a href="">
+                  <img src="./img/instagram 2.jpg" alt="instagram"
+                /></a>
               </li>
               <li>
-                <a href=""> <img src="./img/twitter 1.jpg" alt="" /></a>
+                <a href=""> <img src="./img/twitter 1.jpg" alt="twitter" /></a>
               </li>
               <li>
-                <a href=""> <img src="./img/FB.jpg" alt="" /></a>
+                <a href=""> <img src="./img/FB.jpg" alt="FB" /></a>
               </li>
               <li>
-                <a href=""> <img src="./img/In.jpg" alt="" /></a>
+                <a href=""> <img src="./img/In.jpg" alt="In" /></a>
               </li>
             </ul>
           </li>
           <li>
             <a href="">
-              <img src="./img/img-b.jpg" alt="Smiling man" />
+              <img
+                src="./img/img-b.jpg"
+                alt="Smiling man"
+                width="264px"
+                height="260px"
+              />
             </a>
             <h3>Tom Ford</h3>
             <h4>Frontend Developer</h4>
             <ul>
               <li>
-                <a href=""> <img src="./img/instagram 2.jpg" alt="" /></a>
+                <a href="">
+                  <img src="./img/instagram 2.jpg" alt="instagram"
+                /></a>
               </li>
               <li>
-                <a href=""> <img src="./img/twitter 1.jpg" alt="" /></a>
+                <a href=""> <img src="./img/twitter 1.jpg" alt="twitter" /></a>
               </li>
               <li>
-                <a href=""> <img src="./img/FB.jpg" alt="" /></a>
+                <a href=""> <img src="./img/FB.jpg" alt="FB" /></a>
               </li>
               <li>
-                <a href=""> <img src="./img/In.jpg" alt="" /></a>
+                <a href=""> <img src="./img/In.jpg" alt="In" /></a>
               </li>
             </ul>
           </li>
           <li>
             <a href="">
-              <img src="./img/img-c.jpg" alt="Smiling girl" />
+              <img
+                src="./img/img-c.jpg"
+                alt="Smiling girl"
+                width="264px"
+                height="260px"
+              />
             </a>
             <h3>Camila Garcia</h3>
             <h4>Marketing</h4>
             <ul>
               <li>
-                <a href=""> <img src="./img/instagram 2.jpg" alt="" /></a>
+                <a href="">
+                  <img src="./img/instagram 2.jpg" alt="instagram"
+                /></a>
               </li>
               <li>
-                <a href=""> <img src="./img/twitter 1.jpg" alt="" /></a>
+                <a href=""> <img src="./img/twitter 1.jpg" alt="twitter" /></a>
               </li>
               <li>
-                <a href=""> <img src="./img/FB.jpg" alt="" /></a>
+                <a href=""> <img src="./img/FB.jpg" alt="FB" /></a>
               </li>
               <li>
-                <a href=""> <img src="./img/In.jpg" alt="" /></a>
+                <a href=""> <img src="./img/In.jpg" alt="In" /></a>
               </li>
             </ul>
           </li>
           <li>
             <a href="">
-              <img src="./img/img-d.jpg" alt="Smiling man" />
+              <img
+                src="./img/img-d.jpg"
+                alt="Smiling man"
+                width="264px"
+                height="260px"
+              />
             </a>
             <h3>Daniel Wilson</h3>
             <h4>UI Designer</h4>
             <ul>
               <li>
-                <a href=""> <img src="./img/instagram 2.jpg" alt="" /></a>
+                <a href="">
+                  <img src="./img/instagram 2.jpg" alt="instagram"
+                /></a>
               </li>
               <li>
-                <a href=""> <img src="./img/twitter 1.jpg" alt="" /></a>
+                <a href=""> <img src="./img/twitter 1.jpg" alt="twitter" /></a>
               </li>
               <li>
-                <a href=""> <img src="./img/FB.jpg" alt="" /></a>
+                <a href=""> <img src="./img/FB.jpg" alt="FB" /></a>
               </li>
               <li>
-                <a href=""> <img src="./img/In.jpg" alt="" /></a>
+                <a href=""> <img src="./img/In.jpg" alt="In" /></a>
               </li>
             </ul>
           </li>
