--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
       </section>
 
       <section>
-        <h2></h2>
+        <!--<h2></h2>-->
+
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -93,8 +94,8 @@
               <img
                 src="./img/img1.jpg"
                 alt="Computer MAC"
-                width="360px"
-                height="300px"
+                width="360"
+                height="300"
               />
             </a>
           </li>
@@ -103,8 +104,8 @@
               <img
                 src="./img/img2.jpg"
                 alt="Mobile phones"
-                width="360px"
-                height="300px"
+                width="360"
+                height="300"
               />
             </a>
           </li>
@@ -113,8 +114,8 @@
               <img
                 src="./img/img3.jpg"
                 alt="Computer and phones"
-                width="360px"
-                height="300px"
+                width="360"
+                height="300"
               />
             </a>
           </li>
@@ -129,8 +130,8 @@
               <img
                 src="./img/img-a.jpg"
                 alt="Smiling man with a beard"
-                width="264px"
-                height="260px"
+                width="264"
+                height="260"
               />
             </a>
             <h3>Mark Guerrero</h3>
@@ -138,11 +139,11 @@
             <ul>
               <li>
                 <a href="">
-                  <img src="./img/instagram 2.jpg" alt="instagram"
+                  <img src="./img/instagram.jpg" alt="instagram"
                 /></a>
               </li>
               <li>
-                <a href=""> <img src="./img/twitter 1.jpg" alt="twitter" /></a>
+                <a href=""> <img src="./img/twitter.jpg" alt="twitter" /></a>
               </li>
               <li>
                 <a href=""> <img src="./img/FB.jpg" alt="FB" /></a>
@@ -157,8 +158,8 @@
               <img
                 src="./img/img-b.jpg"
                 alt="Smiling man"
-                width="264px"
-                height="260px"
+                width="264"
+                height="260"
               />
             </a>
             <h3>Tom Ford</h3>
@@ -166,11 +167,11 @@
             <ul>
               <li>
                 <a href="">
-                  <img src="./img/instagram 2.jpg" alt="instagram"
+                  <img src="./img/instagram.jpg" alt="instagram"
                 /></a>
               </li>
               <li>
-                <a href=""> <img src="./img/twitter 1.jpg" alt="twitter" /></a>
+                <a href=""> <img src="./img/twitter.jpg" alt="twitter" /></a>
               </li>
               <li>
                 <a href=""> <img src="./img/FB.jpg" alt="FB" /></a>
@@ -185,8 +186,8 @@
               <img
                 src="./img/img-c.jpg"
                 alt="Smiling girl"
-                width="264px"
-                height="260px"
+                width="264"
+                height="260"
               />
             </a>
             <h3>Camila Garcia</h3>
@@ -194,11 +195,11 @@
             <ul>
               <li>
                 <a href="">
-                  <img src="./img/instagram 2.jpg" alt="instagram"
+                  <img src="./img/instagram.jpg" alt="instagram"
                 /></a>
               </li>
               <li>
-                <a href=""> <img src="./img/twitter 1.jpg" alt="twitter" /></a>
+                <a href=""> <img src="./img/twitter.jpg" alt="twitter" /></a>
               </li>
               <li>
                 <a href=""> <img src="./img/FB.jpg" alt="FB" /></a>
@@ -213,8 +214,8 @@
               <img
                 src="./img/img-d.jpg"
                 alt="Smiling man"
-                width="264px"
-                height="260px"
+                width="264"
+                height="260"
               />
             </a>
             <h3>Daniel Wilson</h3>
@@ -222,11 +223,11 @@
             <ul>
               <li>
                 <a href="">
-                  <img src="./img/instagram 2.jpg" alt="instagram"
+                  <img src="./img/instagram.jpg" alt="instagram"
                 /></a>
               </li>
               <li>
-                <a href=""> <img src="./img/twitter 1.jpg" alt="twitter" /></a>
+                <a href=""> <img src="./img/twittem.jpg" alt="twitter" /></a>
               </li>
               <li>
                 <a href=""> <img src="./img/FB.jpg" alt="FB" /></a>
