--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 /></a>
               </li>
               <li>
-                <a href=""> <img src="./img/twittem.jpg" alt="twitter" /></a>
+                <a href=""> <img src="./img/twitter.jpg" alt="twitter" /></a>
               </li>
               <li>
                 <a href=""> <img src="./img/FB.jpg" alt="FB" /></a>
