--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       <a href="./index.html">WebStudio</a>
       <span>
         Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
+        marketing & growth solutions. 123456789
       </span>
     </footer>
   </body>
